--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,22 @@
     "version": 2,
     "builds": [
         {
-            "src": "filemanager/backend/vercel_wsgi.py",
+            "src": "backend/vercel_wsgi.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "filemanager/backend/vercel_wsgi.py"
+            "dest": "backend/vercel_wsgi.py"
         },
         {
             "src": "/admin/(.*)",
-            "dest": "filemanager/backend/vercel_wsgi.py"
+            "dest": "backend/vercel_wsgi.py"
         },
         {
             "src": "/(.*)",
-            "dest": "filemanager/frontend/build/$1"
+            "dest": "frontend/build/$1"
         }
     ]
 }
