--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,21 @@
     "routes": [
         {
             "src": "/api/health",
-            "dest": "backend/vercel_wsgi.py"
+            "dest": "backend/vercel_wsgi.py",
+            "headers": {
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Methods": "GET, OPTIONS",
+                "Access-Control-Allow-Headers": "Content-Type, Authorization"
+            }
         },
         {
             "src": "/api/(.*)",
-            "dest": "backend/vercel_wsgi.py"
+            "dest": "backend/vercel_wsgi.py",
+            "headers": {
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+                "Access-Control-Allow-Headers": "Content-Type, Authorization"
+            }
         },
         {
             "src": "/admin(.*)",
