--- a/vercel.json
+++ b/vercel.json
@@ -11,18 +11,30 @@
             "src": "/api/health",
             "dest": "backend/vercel_wsgi.py",
             "headers": {
-                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Origin": "https://frrontend.vercel.app",
                 "Access-Control-Allow-Methods": "GET, OPTIONS",
-                "Access-Control-Allow-Headers": "Content-Type, Authorization"
+                "Access-Control-Allow-Headers": "Content-Type, Authorization",
+                "Access-Control-Allow-Credentials": "true"
+            }
+        },
+        {
+            "src": "/health",
+            "dest": "backend/vercel_wsgi.py",
+            "headers": {
+                "Access-Control-Allow-Origin": "https://frrontend.vercel.app",
+                "Access-Control-Allow-Methods": "GET, OPTIONS",
+                "Access-Control-Allow-Headers": "Content-Type, Authorization",
+                "Access-Control-Allow-Credentials": "true"
             }
         },
         {
             "src": "/api/(.*)",
             "dest": "backend/vercel_wsgi.py",
             "headers": {
-                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Origin": "https://frrontend.vercel.app",
                 "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-                "Access-Control-Allow-Headers": "Content-Type, Authorization"
+                "Access-Control-Allow-Headers": "Content-Type, Authorization",
+                "Access-Control-Allow-Credentials": "true"
             }
         },
         {
@@ -36,7 +48,7 @@
     ],
     "env": {
         "DJANGO_SETTINGS_MODULE": "backend.settings",
-        "ALLOWED_HOSTS": "filemanager-sandy.vercel.app,vercel.app",
+        "ALLOWED_HOSTS": "filemanager-sandy.vercel.app,frrontend.vercel.app,vercel.app",
         "DEBUG": "False",
         "VERCEL": "true"
     }
