--- a/vercel.json
+++ b/vercel.json
@@ -9,53 +9,19 @@
     "routes": [
         {
             "src": "/api/health",
-            "methods": [
-                "OPTIONS",
-                "GET"
-            ],
-            "dest": "backend/vercel_wsgi.py",
-            "headers": {
-                "Access-Control-Allow-Origin": "*",
-                "Access-Control-Allow-Methods": "GET, OPTIONS",
-                "Access-Control-Allow-Headers": "*"
-            }
-        },
-        {
-            "src": "/health",
-            "methods": [
-                "OPTIONS",
-                "GET"
-            ],
-            "dest": "backend/vercel_wsgi.py",
-            "headers": {
-                "Access-Control-Allow-Origin": "*",
-                "Access-Control-Allow-Methods": "GET, OPTIONS",
-                "Access-Control-Allow-Headers": "*"
-            }
-        },
-        {
-            "src": "/api/(.*)",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE",
-                "OPTIONS"
-            ],
-            "dest": "backend/vercel_wsgi.py",
-            "headers": {
-                "Access-Control-Allow-Origin": "*",
-                "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-                "Access-Control-Allow-Headers": "*"
-            }
-        },
-        {
-            "src": "/admin(.*)",
             "dest": "backend/vercel_wsgi.py"
         },
         {
-            "src": "/(.*)",
-            "dest": "frontend/build/$1"
+            "src": "/login(/|/)?",
+            "methods": [
+                "OPTIONS",
+                "POST"
+            ],
+            "dest": "backend/vercel_wsgi.py"
+        },
+        {
+            "src": "/api/(.*)",
+            "dest": "backend/vercel_wsgi.py"
         }
     ],
     "env": {
